# toDoList

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  build.ps1
.history/: BUGFIX_SUMMARY_20260104131406.md  CHANGELOG_20260104131511.md  README_20260104131340.md  README_20260104131536.md
.history/docs/: DATA_LOSS_FIX_20260104131005.md  DATA_PROTECTION_GUIDE_20260104131448.md
.history/examples/: quick_test_recovery_20260104131536.ps1  test_data_recovery_20260104131536.ps1
.history/src/: MainWindow_20260104131536.cpp  TaskStorage_20260104130927.cpp  TaskStorage_20260104130934.cpp  TaskStorage_20260104131536.h
docs/: AUTOSTART.md  NETWORK_API.md
examples/: README.md  send_task.ps1  send_task.py  send_task_http.ps1  send_task_http.py  tasks_example.json
src/: AddTaskDialog.cpp  AddTaskDialog.h  ApiServer.cpp  ApiServer.h  HelpDialog.cpp  HelpDialog.h  MainWindow.cpp  MainWindow.h  NetworkApiServer.cpp  NetworkApiServer.h  SettingsDialog.cpp  SettingsDialog.h  StatsDialog.cpp  StatsDialog.h  TaskDelegate.cpp  TaskDelegate.h  TaskItem.cpp  TaskItem.h  TaskModel.cpp  TaskModel.h  TaskStorage.cpp  main.cpp
ui/: AddTaskDialog.ui  HelpDialog.ui  MainWindow.ui  SettingsDialog.ui  StatsDialog.ui
